--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -6,7 +6,7 @@ on:
       - "Vagrantfile"
 jobs:
   vagrant-up:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
 
       - uses: actions/checkout@v2
