ci: trigger ci on ci file change

--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -4,6 +4,7 @@ on:
     paths:
       - "playbook.yaml"
       - "Vagrantfile"
+      - ".github/workflows/vagrant.yaml"
 jobs:
   vagrant-up:
     runs-on: macos-10.15
