--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: Run vagrant up
         run: vagrant up
 
-      - name: ssh into box after boot
-        run: vagrant ssh -c "echo 'hello world!'"
+      # - name: ssh into box after boot
+      #   run: vagrant ssh -c "echo 'hello world!'"
