--- a/ansible/roles/ansible-role-sssd/molecule/default/molecule.yml
+++ b/ansible/roles/ansible-role-sssd/molecule/default/molecule.yml
@@ -8,7 +8,7 @@ driver:
 platforms:
   - name: vagrant-archlinux-ansible
     box: archlinux/archlinux
-  - name: sssd-vagrant-ubuntu-ansible
+  - name: vagrant-ubuntu-ansible
     box: peru/ubuntu-20.04-server-amd64
 provisioner:
   name: ansible
