--- a/ansible/roles/ansible-role-sssd/tasks/common.yaml
+++ b/ansible/roles/ansible-role-sssd/tasks/common.yaml
@@ -33,27 +33,25 @@
     owner: root
   notify: restart sssd
 
-- name: Configure sshd
+- name: Update SSHD config
+  when: sshd_sss_config_enable == yes
   notify: restart sshd
-  when: sshd_sss_config_enable == 'yes'
-  block:
-    - name: Update SSHD config
-      lineinfile:
-        backup: yes
-        dest: "/etc/ssh/sshd_config"
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
-        state: present
-        validate: 'sshd -T -f %s'
-        mode: 0644
-      with_items:
-        - regexp: "^#AuthorizedKeysCommandUser"
-          line: "AuthorizedKeysCommandUser root"
-        - regexp: "^#AuthorizedKeysCommand"
-          line: "AuthorizedKeysCommand /usr/bin/sss_ssh_authorizedkeys"
-        - regexp: "^#PasswordAuthentication"
-          line: "PasswordAuthentication no"
-        - regexp: "^#PubkeyAuthentication"
-          line: "PubkeyAuthentication yes"
-        - regexp: "^#AuthorizedKeysFile"
-          line: "AuthorizedKeysFile	.ssh/authorized_keys"
+  lineinfile:
+    backup: yes
+    dest: "/etc/ssh/sshd_config"
+    regexp: "{{ item.regexp }}"
+    line: "{{ item.line }}"
+    state: present
+    validate: 'sshd -T -f %s'
+    mode: 0644
+  with_items:
+    - regexp: "^#AuthorizedKeysCommandUser"
+      line: "AuthorizedKeysCommandUser root"
+    - regexp: "^#AuthorizedKeysCommand"
+      line: "AuthorizedKeysCommand /usr/bin/sss_ssh_authorizedkeys"
+    - regexp: "^#PasswordAuthentication"
+      line: "PasswordAuthentication no"
+    - regexp: "^#PubkeyAuthentication"
+      line: "PubkeyAuthentication yes"
+    - regexp: "^#AuthorizedKeysFile"
+      line: "AuthorizedKeysFile	.ssh/authorized_keys"
