--- a/ansible/roles/ansible-role-sssd/molecule/default/files/molecule-vars.yaml
+++ b/ansible/roles/ansible-role-sssd/molecule/default/files/molecule-vars.yaml
@@ -10,7 +10,6 @@ sssd_config:
     config_file_version: 2
     services: nss, pam, sudo, ssh
     domains: IMPROWISED
-    shell_fallback: /bin/bash
 
   domain/IMPROWISED:
     cache_credentials: false
@@ -20,9 +19,9 @@ sssd_config:
     auth_provider: ldap
     access_provider: ldap
     ldap_uri: ldaps://directory.improwised.com
-    ldap_search_base: dc=glauth,dc=com
-    ldap_default_bind_dn: uid=serviceuser,cn=svcaccts,dc=glauth,dc=com
-    ldap_group_search_base: cn=groups,dc=glauth,dc=com
+    ldap_search_base: dc=improwised,dc=com
+    ldap_default_bind_dn: uid=serviceuser,cn=svcaccts,dc=improwised,dc=com
+    ldap_group_search_base: cn=groups,dc=improwised,dc=com
     ldap_default_authtok_type: password
     ldap_default_authtok: HF4tinWjn4Yh9DiJ
     sudo_provider: none
@@ -30,7 +29,7 @@ sssd_config:
     ldap_schema: rfc2307
     ldap_tls_reqcert: allow
     ldap_access_order: filter
-    ldap_access_filter: memberOf=cn=employee,cn=groups,dc=glauth,dc=com
+    ldap_access_filter: memberOf=cn=employee,cn=groups,dc=improwised,dc=com
     ldap_referrals: false
 
 # Configure SSHD for SSSD, default `no`
