--- a/ansible/roles/ansible-role-sssd/molecule/default/verify.yml
+++ b/ansible/roles/ansible-role-sssd/molecule/default/verify.yml
@@ -12,27 +12,28 @@
         state: started
         sleep: 5
 
-    # - name: Verify sshd is running
-    #   when: sshd_sss_config_enable == 'yes'
-    #   block:
-    #     - name: Verify sshd is running
-    #       ansible.builtin.service:
-    #         name: "sshd"
-    #         state: started
-    #         sleep: 5
+    - name: Verify sshd is running
+      register: sshd_service_running
+      ignore_errors: yes
+      block:
+        - name: Verify sshd is running
+          ansible.builtin.service:
+            name: "sshd"
+            state: started
+            sleep: 5
 
     - name: Verify sss ssh working
-      ansible.builtin.command: /usr/bin/sss_ssh_authorizedkeys pratikbalar
+      ansible.builtin.command: /usr/bin/sss_ssh_authorizedkeys pratik
       register: ansible_test_sss
       retries: 3
       delay: 30
       until: ansible_test_sss.stdout | length > 0
 
-    # - name: Set ansible-test user's private ssh key
-    #   ansible.builtin.set_fact:
-    #     ansible_ssh_private_key_file: "molecule/default/files/vagrant_rsa"
+    - name: Set pratik user's private ssh key
+      ansible.builtin.set_fact:
+        ansible_ssh_private_key_file: "molecule/default/files/vagrant_rsa"
 
-    # - name: Reset ssh connection for user ansible-test
-    #   become: yes
-    #   become_user: "ansible-test"
-    #   meta: reset_connection
+    - name: Reset ssh connection for user pratik
+      become: yes
+      become_user: "pratik"
+      meta: reset_connection
