feat(ansible-sssd-role): install tools as per employee role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,7 @@
 roles_path = ./ansible/roles/
 host_key_checking = False
 force_color = 1
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = /tmp
+fact_caching_timeout = 7200
