feat: add osquery, refact vagrantfile

--- a/playbook.yml
+++ b/playbook.yml
@@ -2,104 +2,119 @@
 ## Pacman mirrors
 ## Lable all tools
 
-- hosts: localhost
+- hosts: all
   connection: local
   become: true
   tasks:
-    - name: pacman -Syu
-      community.general.pacman:
-        update_cache: yes
-        upgrade: yes
-        extra_args: --noconfirm
-      tags: [always, syu]
+    - name: Arch
+      when: "{{ ansible_os_family == 'Archlinux' }}"
+      block:
+        - name: pacman -Syu
+          community.general.pacman:
+            update_cache: yes
+            upgrade: yes
+            extra_args: --noconfirm
+          tags: [always, syu]
 
-    - name: Include task list in play
-      include_tasks: ansible/tasks/tools/main.yaml
+        - name: Include task list in play
+          include_tasks: ansible/tasks/tools/main.yaml
 
-    - name: Parallel package downloads to 3
-      ansible.builtin.lineinfile:
-        backup: yes
-        state: present
-        path: "/etc/pacman.conf"
-        insertafter: '^\[options\]$'
-        regex: "^ParallelDownloads"
-        line: "ParallelDownloads = 3"
+        - name: Parallel package downloads to 3
+          ansible.builtin.lineinfile:
+            backup: yes
+            state: present
+            path: "/etc/pacman.conf"
+            insertafter: '^\[options\]$'
+            regex: "^ParallelDownloads"
+            line: "ParallelDownloads = 3"
 
-    - name: Install Official packages
-      community.general.pacman:
-        state: present
-        extra_args: --noconfirm
-        name: "{{ pacman }}"
+        - name: Install Official packages
+          community.general.pacman:
+            state: present
+            extra_args: --noconfirm
+            name: "{{ pacman }}"
 
-    - name: Install community packages
-      community.general.pacman:
-        executable: yay
-        state: present
-        extra_args: --noconfirm --noanswerclean --noanswerdiff  --noansweredit  --noanswerupgrade
-        name: "{{ yay }}"
+        - name: Install community packages
+          community.general.pacman:
+            executable: yay
+            state: present
+            extra_args: --noconfirm --noanswerclean --noanswerdiff  --noansweredit  --noanswerupgrade
+            name: "{{ yay }}"
 
-    - name: Enable docker without sudo
-      ansible.builtin.group:
-        name: docker
-        state: present
+        - name: Enable docker without sudo
+          ansible.builtin.group:
+            name: docker
+            state: present
 
-    - name: Adding current user to group docker
-      user:
-        name: "{{ ansible_user_id }}"
-        groups: docker
-        append: yes
+        - name: Adding current user to group docker
+          user:
+            name: "{{ ansible_user_id }}"
+            groups: docker
+            append: yes
 
-    - name: Make sure a service unit is running
-      ansible.builtin.systemd:
-        enabled: yes
-        state: started
-        name: docker
+        - name: Make sure a service unit is running
+          ansible.builtin.systemd:
+            enabled: yes
+            state: started
+            name: docker
 
-    - name: Reset ssh connection to allow user changes to affect ansible user
-      ansible.builtin.meta: reset_connection
+        - name: Reset ssh connection to allow user changes to affect ansible user
+          ansible.builtin.meta: reset_connection
 
-    - name: Reduce GRUB timeout
-      ansible.builtin.lineinfile:
-        backup: yes
-        state: present
-        path: /etc/default/grub
-        regexp: "^GRUB_TIMEOUT="
-        line: "GRUB_TIMEOUT=0"
-      register: grub_change
+        - name: Check grub exist
+          stat:
+            path: /etc/default/grub
+          register: grub_exist
 
-    - name: Update grub
-      ansible.builtin.command: update-grub
-      when: grub_change is true
+        - name: Reduce GRUB timeout
+          ansible.builtin.lineinfile:
+            backup: yes
+            state: present
+            path: /etc/default/grub
+            regexp: "^GRUB_TIMEOUT="
+            line: "GRUB_TIMEOUT=0"
+          when: grub_exist.stat.exists
+          notify: Update grub
 
-    - name: Reduce swappiness
-      ansible.builtin.copy:
-        content: "vm.swappiness=10"
-        dest: /etc/sysctl.d/100-manjaro-custom.conf
+        - name: Reduce swappiness
+          ansible.builtin.copy:
+            content: "vm.swappiness=10"
+            dest: /etc/sysctl.d/100-manjaro-custom.conf
 
-    - name: Reduce GRUB timeout
-      ansible.builtin.lineinfile:
-        backup: yes
-        state: present
-        path: /etc/gdm/custom.conf
-        regexp: "^WaylandEnable=true"
-        line: "WaylandEnable=false"
-      when: enable_wayland is yes
+        - name: Check gdm exist
+          stat:
+            path: /etc/gdm/custom.conf
+          register: gdm_exist
 
-    - name: Printer
-      ansible.builtin.systemd:
-        enabled: yes
-        state: started
-        name: org.cups.cupsd
+        - name: Disable wayland
+          ansible.builtin.lineinfile:
+            backup: yes
+            state: present
+            path: /etc/gdm/custom.conf
+            regexp: "^WaylandEnable=true"
+            line: "WaylandEnable=false"
+          when: gdm_exist.stat.exists
 
-    - name: Include osqueryd task
-      include_tasks: ansible/tasks/osqueryd/main.yaml
+        - name: Printer
+          ansible.builtin.systemd:
+            enabled: yes
+            state: started
+            name: org.cups.cupsd
 
-    - name: Set login shell of user {{ ansible_env.USER }} to `/bin/zsh` with `usermod`
-      ansible.builtin.command: usermod --shell /bin/zsh {{ ansible_env.USER }}
-      become: false
-      changed_when: false
+        - name: Set login shell of user {{ ansible_env.USER }} to `/bin/zsh` with `usermod`
+          ansible.builtin.command: usermod --shell /bin/zsh {{ ansible_env.USER }}
+          become: false
+          changed_when: false
 
     - name: Run SSSD role
       include_role:
         name: ansible-role-sssd
       tags: [always, sssd]
+
+  handlers:
+    - name: Update grub
+      ansible.builtin.command: update-grub
+
+- name: Install osqueryd
+  import_playbook: ansible/playbooks/osquery/playbook.yaml
+  tags: [always, osquery, osqueryd]
