--- a/ansible/playbooks/osquery/vars.yaml
+++ b/ansible/playbooks/osquery/vars.yaml
@@ -1,8 +1,10 @@
+# fleet_endpoint:
+osqueryd_deb: https://pkg.osquery.io/deb/osquery_5.1.0-1.linux_amd64.deb
 osqueryd_enroll_secret: fasdf
-osquery_path: /usr/bin/
-osquery_flags:
-  verbose: true
-  enroll_secret_env: ENROLL_SECRET
+osqueryd_path: /usr/bin/
+
+osqueryd_conf: /etc/osquery/osquery.flags
+osqueryd_flags:
   enroll_tls_endpoint: /api/v1/osquery/enroll
   config_plugin: tls
   config_tls_endpoint: /api/v1/osquery/config
@@ -16,5 +18,4 @@ osquery_flags:
   logger_plugin: tls
   logger_tls_endpoint: /api/v1/osquery/log
   logger_tls_period: 10
-  debug: true
   # tls_server_certs: /etc/osquery/fleet.crt
