--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -15,7 +15,12 @@ jobs:
           key: ${{ runner.os }}-pip3-
           restore-keys: ${{ runner.os }}-pip3-
 
-      - run: pip3 install ansible molecule molecule-vagrant ansible-lint
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+
+      - run: python -m pip install --user ansible molecule molecule-vagrant ansible-lint
 
       - name: Get tools version
         run: |
