--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -12,14 +12,14 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/Library/Caches/pip
-          key: ${{ runner.os }}-pip3-
-          restore-keys: ${{ runner.os }}-pip3-
+          key: ${{ runner.os }}-pip-
+          restore-keys: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/**') }}
 
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
 
-      - run: python -m pip install --user ansible molecule molecule-vagrant ansible-lint
+      - run: pip install --user ansible molecule molecule-vagrant ansible-lint
 
       - name: Get tools version
         run: |
