--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
       - run: pip install --user ansible molecule molecule-vagrant ansible-lint
 
@@ -25,6 +25,12 @@ jobs:
         run: |
           vagrant --version
           ansible --version
+          python --version || true
+          python2 --version || true
+          python3 --version || true
+          pip --version || true
+          pip2 --version || true
+          pip3 --version || true
 
       - name: Test playbook
         run: vagrant up
