--- a/.github/workflows/vagrant.yaml
+++ b/.github/workflows/vagrant.yaml
@@ -15,7 +15,7 @@ jobs:
           key: ${{ runner.os }}-pip-
           restore-keys: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/**') }}
 
-      - run: pip3 install --user ansible molecule molecule-vagrant ansible-lint
+      - run: pip3 install ansible molecule molecule-vagrant ansible-lint
 
       - name: Get tools version
         run: |
