--- a/ansible/playbooks/osquery/playbook.yaml
+++ b/ansible/playbooks/osquery/playbook.yaml
@@ -25,7 +25,7 @@
         group: root
         mode: 0600
       notify:
-        - Restart osqueryd
+        - Reload osqueryd
 
     - name: Enable osqueryd
       ansible.builtin.service:
@@ -35,12 +35,7 @@
 
   handlers:
     - name: Reload osqueryd
-      ansible.builtin.service:
-        name: osqueryd.service
-        enabled: yes
-        state: reloaded
-
-    - name: Restart osqueryd
-      ansible.builtin.service:
-        name: osqueryd.service
+      ansible.builtin.systemd:
         state: restarted
+        daemon_reload: yes
+        name: osqueryd.service
