feat: osquery conf support

--- a/ansible/playbooks/osquery/Archlinux.yaml
+++ b/ansible/playbooks/osquery/Archlinux.yaml
@@ -1,4 +1,4 @@
-- name: (Arch) Install osqueryd package
+- name: (Arch) Install osquery packages
   community.general.pacman:
     state: present
     extra_args: --noconfirm
