--- a/ansible/playbooks/osquery/playbook.yaml
+++ b/ansible/playbooks/osquery/playbook.yaml
@@ -1,13 +1,89 @@
 - hosts: all
   become: true
-  vars_files: [vars.yaml]
+  serial: 1
+  vars_files:
+    - vars.yaml
   tasks:
+    - name: Stat env file
+      stat:
+        path: /etc/osquery/osqueryd_env.conf
+      register: osqueryd_env_file
+
+    - name: Create osquery log dir
+      ansible.builtin.file:
+        path: /var/log/osquery/
+        state: directory
+        mode: '0600'
+        owner: root
+        group: root
+    # - name: Hostname lenght
+    #   set_fact:
+    #     hostname_length: "{{ ansible_hostname | length | int }}"
+    #   when: osqueryd_env_file.stat.exists is not true
+
+    - name: Hostname lenght
+      set_fact:
+        hostname_length_minus: "{{ 31 - ansible_hostname|length|int }}" #Ansible arithmetic substraction 1
+      when: osqueryd_env_file.stat.exists is not true
+
+    - name: Generate random stringjou
+      set_fact:
+        current_token: "{{ ansible_hostname }}-{{ query('community.general.random_string', length=hostname_length_minus, special=false, upper=false, lower=true, numbers=true)[0] }}"
+      when: osqueryd_env_file.stat.exists is not true
+
+    - name: Request API through username/password
+      block:
+        - name: Login to {{ fleet_endpoint }} using {{ fleet_login_cred.split(":")[0] }} - ****
+          uri:
+            url: "https://{{ fleet_endpoint }}/api/v1/fleet/login"
+            method: POST
+            status_code: 200
+            body_format: json
+            body: |
+              {
+                "email": "{{ fleet_login_cred.split(":")[0] }}",
+                "password": "{{ fleet_login_cred.split(":")[1] }}"
+              }
+          register: login_info
+
+        - name: Set fleet_login_cred fact
+          set_fact:
+            fleet_bearer_token: "{{ login_info.json.token }}"
+
+        - name: Get Set token
+          import_tasks: getsettoken.yaml
+
+        - name: Logout from {{ fleet_endpoint }}
+          uri:
+            url: https://{{ fleet_endpoint }}/api/v1/fleet/logout
+            method: POST
+            status_code: 200
+            body_format: json
+            headers:
+              Authorization: Bearer {{ login_info.json.token }}
+
+      when:
+        - fleet_login_cred is search(":")
+        - osqueryd_env_file.stat.exists is not true
+
+    - name: Request API through username/password
+      block:
+        - name: Set fleet_login_cred fact
+          set_fact:
+            fleet_bearer_token: "{{ fleet_login_cred }}"
+
+        - name: Get Set token
+          import_tasks: getsettoken.yaml
+      when:
+        - fleet_login_cred is not search(":")
+        - osqueryd_env_file.stat.exists is not true
+
     - name: Install osqueryd package
       include_tasks: "{{ ansible_os_family }}.yaml"
 
     - name: Set osqueryd service
       template:
-        src: "osqueryd.service.j2"
+        src: "templates/osqueryd.service.j2"
         dest: "/etc/systemd/system/osqueryd.service"
         owner: root
         group: root
@@ -17,7 +93,7 @@
 
     - name: Set osqueryd flags
       template:
-        src: "osqueryd.flags.j2"
+        src: "templates/osqueryd.flags.j2"
         dest: "{{ osqueryd_flags_file }}"
         owner: root
         group: root
@@ -27,20 +103,20 @@
 
     - name: Copy osqueryd conf
       ansible.builtin.copy:
-        src: "{{ osqueryd_conf }}"
-        dest: /etc/osquery/osquery.conf_bak
+        src: "templates/osquery.conf"
+        dest: "{{ osqueryd_conf }}_bak"
         owner: root
         group: root
         mode: 0600
 
     - name: Stat remote osqueryd conf
       stat:
-        path: "/etc/osquery/osquery.conf"
+        path: "{{ osqueryd_conf }}"
       register: osqueryd_remote_conf
 
     - name: Stat local(in remote) osqueryd conf
       stat:
-        path: "/etc/osquery/osquery.conf_bak"
+        path: "{{ osqueryd_conf }}_bak"
       register: osqueryd_local_conf
 
     - name: Stop osqueryd
@@ -51,18 +127,27 @@
 
     - name: Copy osqueryd conf
       ansible.builtin.copy:
-        src: "{{ osqueryd_conf }}"
-        dest: /etc/osquery/osquery.conf_bak
+        src: "templates/osquery.conf"
+        dest: "{{ osqueryd_conf }}"
         owner: root
         group: root
         mode: 0600
       when: osqueryd_local_conf.stat.checksum != osqueryd_remote_conf.stat.checksum
+
+    - name: Enable osqueryd
+      ansible.builtin.service:
+        name: osqueryd.service
+        state: started
+        enabled: yes
 
     - name: "{{ 'Start' if osqueryd_local_conf.stat.checksum != osqueryd_remote_conf.stat.checksum else 'Restart' }} osqueryd"
       ansible.builtin.service:
         name: osqueryd.service
         state: "{{ 'started' if osqueryd_local_conf.stat.checksum != osqueryd_remote_conf.stat.checksum else 'restarted' }}"
         enabled: yes
+      when:
+      - osqueryd_local_conf.stat.checksum != osqueryd_remote_conf.stat.checksum
+      - osqueryd_env_file.stat.exists is not true
 
   handlers:
     - name: Reload osqueryd
