--- a/ansible/playbooks/osquery/vars.yaml
+++ b/ansible/playbooks/osquery/vars.yaml
@@ -1,21 +1,26 @@
-# fleet_endpoint:
+## If you want to use password, fleet_login_cred: mytestusername:mytestpassword
+## Else bearer is default auth mechanism
+fleet_login_cred: 3wm1eh/6gturUj4YGul71mMvdbJbZi0h0iOgbXWIisAFdhVZJN9FWSpj1Ff2IVDZvSfLLGdZAmQls2pxJz2lNw==
+
+fleet_endpoint: fleet.improwised.dev
+
+## Defaults
+fleet_secret_env_file: /etc/osquery/osqueryd_env.conf
 osqueryd_deb: https://pkg.osquery.io/deb/osquery_5.1.0-1.linux_amd64.deb
-osqueryd_enroll_secret: fasdf
 osqueryd_path: /usr/bin/
-osqueryd_conf: osquery.conf
+osqueryd_conf: /etc/osquery/osquery.conf
 osqueryd_flags_file: /etc/osquery/osquery.flags
 osqueryd_flags:
-  enroll_tls_endpoint: /api/v1/osquery/enroll
+  logger_plugin: tls
   config_plugin: tls
-  config_tls_endpoint: /api/v1/osquery/config
   config_refresh: 10
-  disable_distributed: false
-  distributed_plugin: tls
+  logger_tls_period: 10
   distributed_interval: 10
+  distributed_plugin: tls
+  disable_distributed: false
   distributed_tls_max_attempts: 3
+  logger_tls_endpoint: /api/v1/osquery/log
+  enroll_tls_endpoint: /api/v1/osquery/enroll
+  config_tls_endpoint: /api/v1/osquery/config
   distributed_tls_read_endpoint: /api/v1/osquery/distributed/read
   distributed_tls_write_endpoint: /api/v1/osquery/distributed/write
-  logger_plugin: tls
-  logger_tls_endpoint: /api/v1/osquery/log
-  logger_tls_period: 10
-  # tls_server_certs: /etc/osquery/fleet.crt
